# Loci

./: PLAN.md  README.md  ROADMAP.md  config.example.toml  planL1_lora_single.md  planL2_lora_router.md  planN_modelbench.md  planP2_multipass.md  planQ_quarantine.md  planX_rerank_prop.md  pyproject.toml
bench/: embedder_sweep.sh  qna.json  qna_scarlet.json
loci/: bench.py  cli.py  config.py  enhance.py  extract.py  generate.py  ingest.py  models.py  pack.py  resolve.py  retrieve.py  store.py
tests/: conftest.py  test_bench.py  test_bench_suite.py  test_config.py  test_enhance.py  test_extract.py  test_generate.py  test_ingest.py  test_pack.py  test_propositions.py  test_resolve.py  test_retrieve.py  test_store.py  test_store_phase5.py
